fix project spacing between cards

--- a/style.css
+++ b/style.css
@@ -147,9 +147,8 @@ margin-left: 35px;
 .cardall {
     display: grid;
     grid-column: 1 / 3;
-    gap: 30px;
+    column-gap: 10px;
     grid-template-columns: repeat(2, minmax(600px, 20%));
-    grid-template-rows: repeat(auto-fit, minmax(250px, 20%));
 }
 
 .card {
@@ -158,10 +157,9 @@ background-color: white;
 padding-left: 20px;
 border-radius: 5px;
 border-left: 7px solid orange;
-margin-left: 45px;
+margin: 20px 0px 20px 40px;
 padding-right: max(20px, 5%);
 display: grid; 
-grid-template-rows: repeat(auto-fit, 1fr);
 }
 
 .card h2 {
